fix: Actualizar ruta de importación del componente Products

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Header from "@/sections/Header.astro"
 import Footer from "@/sections/Footer.astro"
 import Contact from "@/sections/Contact.astro"
 import Locations from "@/sections/Locations.astro"
-import Products from "@/sections/Products.astro"
+import Products from "@/components/Products.astro"
 import About from "@/sections/About.astro"
 import Hero from "@/sections/Hero.astro"
 ---
