--- a/src/components/Products.astro
+++ b/src/components/Products.astro
@@ -109,14 +109,15 @@ const products: Product[] = [
     </h2>
 
     <div
-      class="grid grid-cols-3 grid-rows-2 gap-4 auto-rows-[25rem] max-w-7xl mx-auto"
+      class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 auto-rows-[25rem] md:auto-rows-[15rem] max-w-7xl mx-auto"
     >
       {
-        products.map(({ title, description, image, items }, index) => (
-          <article
+        products.map(({ id, title, description, image, items }, index) => (
+          <a
+            href={`/productos/${id}`}
             class:list={[
               "rounded-xl overflow-hidden relative group cursor-pointer",
-              index === 0 ? "col-span-2 row-span-2" : "",
+              index === 0 ? "md:col-span-2 md:row-span-2" : "",
               "bg-gradient-to-b from-transparent to-black/50",
             ]}
           >
@@ -126,27 +127,28 @@ const products: Product[] = [
               class="w-full h-full object-cover absolute inset-0 z-0 transition-transform duration-700 group-hover:scale-110"
             />
 
-            <div class="relative h-full p-6 flex flex-col justify-end z-10">
-              <h3 class="text-3xl font-bold text-white mb-2">{title}</h3>
-              <p class="text-gray-200 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+            <div class="relative h-full p-4 md:p-6 flex flex-col justify-end z-10">
+              <h3 class="text-2xl md:text-3xl font-bold text-white mb-2">
+                {title}
+              </h3>
+              <p class="text-gray-200 text-sm md:text-base opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                 {description}
               </p>
 
               <div class="grid grid-cols-2 gap-2 mt-4 opacity-0 group-hover:opacity-100 transition-opacity duration-300">
                 {items.slice(0, 4).map((item) => (
-                  <span class="text-sm text-white bg-black/30 px-2 py-1 rounded">
+                  <span class="text-xs md:text-sm text-white bg-black/30 px-2 py-1 rounded">
                     {item.name}
                   </span>
                 ))}
               </div>
             </div>
-          </article>
+          </a>
         ))
       }
     </div>
   </div>
 </section>
-
 <style>
   section {
     min-height: 100vh;
