--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -67,7 +67,7 @@ const {
     inset: 0;
     background: radial-gradient(
       circle at 50% 50%,
-      #dc26264d 0%,
+      rgba(220, 38, 38, 0.3) 0%,
       rgba(0, 0, 0, 0.3) 100%
     );
     pointer-events: none;
