fix: Remove unnecessary background class from footer for cleaner styling

--- a/src/sections/Footer.astro
+++ b/src/sections/Footer.astro
@@ -11,7 +11,7 @@ const socialLinks = [
 ]
 ---
 
-<footer class="relative mt-20 w-full pb-20 pt-14 md:pt-16 bg-background">
+<footer class="relative mt-20 w-full pb-20 pt-14 md:pt-16">
   <div class="container mx-auto px-6">
     <div class="flex flex-col place-items-center gap-16">
       <div
