feat: Eliminar imágenes no necesarias y actualizar enlaces en el pie de página

--- a/src/sections/Footer.astro
+++ b/src/sections/Footer.astro
@@ -5,7 +5,7 @@ const currentYear = new Date().getFullYear()
 const socialLinks = [
   {
     name: "Instagram",
-    url: "https://instagram.com/carniceriasanmartin",
+    url: "https://instagram.com/carniceriasanmartin_serena2023",
     Icon: Instagram,
   },
 ]
