--- a/src/sections/Header.astro
+++ b/src/sections/Header.astro
@@ -14,7 +14,7 @@
       <span></span>
     </label>
     <ul class="nav-links">
-      <li><a href="#inicio">Inicio</a></li>
+      <li><a href="#">Inicio</a></li>
       <li><a href="#sobre-nosotros">Sobre Nosotros</a></li>
       <li><a href="#productos">Productos</a></li>
       <li><a href="#sucursales">Sucursales</a></li>
