--- a/src/sections/Hero.astro
+++ b/src/sections/Hero.astro
@@ -33,8 +33,7 @@
       </span>
     </h1>
     <p class="text-xl md:text-2xl text-gray-200 mb-8 max-w-3xl mx-auto">
-      Los mejores cortes de carne con la distinción de contar con la categoría V
-      Nacional
+      Carnes categoría V Nacional e importadas, la mejor calidad desde 2015
     </p>
     <a
       href="#productos"
