fix: Corregir nombre de ubicación en la sección de contacto

--- a/src/sections/Contact.astro
+++ b/src/sections/Contact.astro
@@ -1,7 +1,7 @@
 ---
 const locations = [
   {
-    name: "Strep Center - Raúl Bitrán",
+    name: "Strip Center - Raúl Bitrán",
     address: "Raúl Bitrán 1701, local 1",
     city: "La Serena, Región de Coquimbo",
     map: "https://maps.google.com/?q=Raúl+Bitrán+1701,+La+Serena",
